projects/Media/docroot/assets/css/common/freshdirect.css
/* ... */
/* exceptions for focus */

div#skip_to_content,.locabar-tab-fdx-cont,body:focus,html:focus,div:focus,*:active,a.accessibleOutlineFF:focus,cssbutton:focus,tr:focus,td:focus,fieldset:focus{
	outline:none;
}
.portrait-item-header-name{
	display:block;
}
/* disable ipad highlight */
* {
  -webkit-tap-highlight-color: transparent;
}

h2.centerline {
  position: relative;
  display: block;
  height: 16px;
  margin: 18px 0 2px;
  border-top: 1px solid #cccccc;
}

h2.centerline span {
  position: relative;
  top: -13px;
  padding: 0 10px;
  background-color: white;
  color: #ff9933;
  font-size: 14px;
  font-weight: bold;
}

.lt-ie8 h2.centerline span {
  top: -21px;

  zoom: 1;
}


.hidden {
  display: none;
}

/* tooltip {{{ */
.tooltipcontent {
  display: none;
}

.tooltip .tooltipcontent {
  display: block;
}

.tooltip {
  position: absolute;
  background-color: white;
  padding: 3px 8px;
  border: 1px solid #ccc;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px 5px 5px 5px;
  -webkit-box-shadow: 0 0 3px #444;
  -moz-box-shadow: 0 0 3px #444;
  box-shadow: 0 0 3px #444;
  z-index: 5000;
}

.tooltip span.arrow {
  position: absolute;
  display: block;
  height: 9px;
  width: 9px;
  overflow: hidden;
  background-image: url(/media_stat/images/common/sprites/tooltip_arrows.png);
  background-repeat: no-repeat;
}

.tooltip_top span.arrow {
  background-position: -25px -1px;
  bottom: -9px;
  top: auto;
  left: 50%;
  margin-left: -4px;
}

.tooltip_bottom span.arrow {
  background-position: -37px -1px;
  top: -9px;
  bottom: auto;
  left: 50%;
  margin-left: -4px;
}

.tooltip.noarrow .arrow {
  display:none;
}

.csstooltip {
  display: inline-block;
}

.csstooltip + .csstooltipcontent,
.csstooltip .csstooltipcontent {
  position: absolute;
  left: -9999px;
}

.csstooltip:focus + .csstooltipcontent,
.csstooltip:hover + .csstooltipcontent,
.csstooltip:focus .csstooltipcontent,
.csstooltip:hover .csstooltipcontent {
  left: auto;
  z-index: 1000;
}

/* }}} */

/* product transparent box height definition */
.prod-descr-box {
  height: auto;
}

/* {{{ plus/minus buttons */
.quantity_plus,
.quantity_minus {
  background: url(/media_stat/images/sprites/plusminus.png) transparent center center no-repeat;
  display: inline-block;
  vertical-align: top;
  width: 27px;
  height: 27px;
  cursor: pointer;
  border:none;
  padding:0;
  text-indent: 27px;
  overflow:hidden;
}

.qtyinput.small .quantity_plus,
.qtyinput.small .quantity_minus {
  background: url(/media_stat/images/sprites/plusminus-small.png) transparent center center no-repeat;
  width: 18px;
  height: 18px;
  vertical-align: middle;
  overflow:hidden;
}

.quantity_plus span,
.quantity_minus span {
  display: none;
}

.quantity_plus {
  background-position: 0 0;
}

.quantity_plus:hover {
  background-position: 0 -27px;
}

.quantity_minus {
  background-position: -27px 0;
}

.quantity_minus:hover {
  background-position: -27px -27px;
}

.qtyinput.small .quantity_plus {
  background-position: 0 0;
}

.qtyinput.small .quantity_plus:hover {
  background-position: 0 -18px;
}

.qtyinput.small .quantity_minus {
  background-position: -18px 0;
}

.qtyinput.small .quantity_minus:hover {
  background-position: -18px -18px;
}

.qtyinput {
  line-height: 27px;
  vertical-align: middle;
  -webkit-user-select: none;
}

.qtyinput > button > div {
  display: none;
}

.qtyinput .qtywrapper > label > span {
  display: none;
}

.qtyinput.small {
  line-height:18px;
  font-size: 100%;
  margin: 0;
}

.qtyinput .qtyinputholder,
#i_viewcart .qtyinput {
  white-space: nowrap;
  display: inline-block;
  font-size:0;
  vertical-align:middle;
}

.qtyinput_grocery {
  margin-bottom: 15px;
}

#i_viewcart .quantity_col {
  text-align:center;
  font-size:0;
  /* width:100px; */
}

#vieworder_table select,
#recipe_form select,
#i_viewcart .viewcartselect,
#popupcart select,
.qtyinput input[type="text"].qty {
  font-size: 12px;
  text-align:center;
  padding:2px;
  line-height: 16px;
  vertical-align:middle;
  height:24px;
  top:0;
  margin:1px 0;
}

.qtyinput input[type="text"].qty {
  width: 2.5em;
  display: inline-block;
  border-color: #c2c2c2;
}

.qtyinput input[type="text"].qty:hover,
.qtyinput input[type="text"].qty:focus {
  border-color: #68aa6d;
}

.qtyinput_fixedwidth {
  width: 100px;
}
.qtyinput .qtyprice {
  font-weight: bold;
}

.qtyinput input.qtypriceinput {
  font-size: 11px;
  font-weight: bold;
}

.qtyinput .qtymessage {
  font-weight: bold;
  vertical-align:middle;
}

#vieworder_table select,
#recipe_form select,
#popupcart select,
#i_viewcart .viewcartselect {
  min-width:8em;
  padding:0;
  height:23px;
  line-height:23px;
  margin:2px 0;
}

.lt-ie8 #i_viewcart .viewcartselect,
.lt-ie8 #popupcart select {
  width:8em;
}

#popupcart .content .cartline[data-freeproduct="true"] .qtyinput{
	opacity: .5;
	filter: alpha(opacity=50);
	pointer-events: none;
   	cursor: default;
}

#popupcart .content .cartline[data-freeproduct='true'] .price.product-sample-free{
	color: #c00;
	font-weight: bold;
}

/* }}} */

/* {{{ page sections */
section.deptnav {
  display: block;
  margin-top: 10px;
}

section.main {
  display: block;
  overflow: hidden;
  position: relative;
  margin: 10px 0 0;
  clear: both;
}

.emptymenu section.main {
  display: none;
}

section.main:before {
  content: '';
  display: block;
  position: absolute;
  width: 173px; /* 175 - 2 */
  border: 1px solid #dce6be;
  background: #f0f5e1;
  top: 0;
  bottom: 0;
  left: 0;
}

section.main.full:before {
  content: none;
}

section.main .leftnav {
  float: left;
  position: relative;
  background: #f0f5e1;
  width: 167px; /* 175 - 2 - 6 */
  border-left: 1px solid #dce6be;
  border-right: 1px solid #dce6be;
  margin: 1px 0;
  padding: 3px;
}

section.main .leftnav *::-webkit-scrollbar {
  width: 12px;
}

section.main .leftnav *::-webkit-scrollbar-track {
  -webkit-border-radius: 6px;
  border-radius: 6px;
  background: #f0f5e1;
  border: 1px #dce6be solid;
}
/* ... */

